# blind-auth

./: Cargo.toml  README.md  build.rs  docker-compose.yml
.github/workflows/: build.yml  test.yml
proto/: blind_auth.proto
src/: prover.rs  verifier.rs
src/lib/: common.rs  prover.rs  public_params.rs  verifier.rs
src/lib/store/: models.rs  store.rs
tests/: verifier_tests.rs
