[package]
name = "blind-auth"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "verifier"
path = "src/verifier.rs"

[[bin]]
name = "prover"
path = "src/prover.rs"

[lib]
name = "common_lib"
path = "src/lib/common.rs"

[dependencies]
tokio = {version = "1", features = ["full"]}
prost = "0.11.9"
prost-types = "0.11.9"
prost-build = "0.11.9"
tonic = "0.9.2"
log = "0.4.20"
clap = {version = "*", features = ["derive"]}
env_logger = "0.10.0"
num-bigint = "0.4.3"
moka = "0.11.3"
num-traits = "0.2.16"
rand = "0.8.5"
getrandom = "0.2.10"
uuid = "1.4.1"

[build-dependencies]
tonic-build = "0.9"
